--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+_del
+
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/macos,python,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,python,node
 
